# jabez_detect_marker

./: CMakeLists.txt
container/: docker-compose.yaml  startup.sh
launch/: launch_node_detect_marker.launch
notebook/: detect_marker.ipynb
scripts/: run_container.sh  run_container_detection.sh  run_container_relay.sh  run_detection.sh  run_detection_ghost.sh  run_relay.sh
src/: node_detect_marker.py
